# webarena

./: .gitignore  pyproject.toml  run.py  setup_env.sh  test.sh
agent/: agent.py
agent/prompts/: prompt_constructor.py
evaluation_harness/: helper_functions.py
llms/: lm_config.py  tokenizers.py
llms/providers/: openai_utils.py
my_results/: config.json  log_files.txt  render_0.html
scripts/: generate_test_data.py
