[project]
name = "webarena"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiolimiter>=1.2.1",
    "beartype==0.12.0",
    "evaluate>=0.4.5",
    "flask>=3.1.2",
    "greenlet>=3.2.4",
    "gymnasium>=1.2.0",
    "httpx[socks]>=0.28.1",
    "nltk>=3.9.1",
    "openai",
    "pillow>=11.3.0",
    "playwright>=1.55.0",
    "text-generation>=0.7.0",
    "tiktoken>=0.11.0",
    "tokenizers>=0.22.0",
    "transformers>=4.56.0",
    "types-tqdm>=4.67.0.20250809",
]
